# alcatraz

./: .gitignore  LICENSE  README.md  TODO.md  alcatraz.go  alcatraz_smoke_test.go  example_test.go  go.mod
.github/workflows/: auto-release.yml  libpf-release.yml  ml-live.yml  pr-label-check.yml  test.yml
analyzer/: analyzer_test.go  engine.go  match_test.go  matcher.go  nlp.go  nlp_test.go  pattern.go  pattern_recognizer.go  recognizer.go  registry.go  result.go
anonymizer/: anonymizer.go  anonymizer_test.go  example_test.go
bench/: .gitignore  README.md  analyze_bench_test.go  compare.py  go.mod
bench/cmd/benchgo/: main.go
bench/cmd/gencorpus/: main.go
bench/internal/corpus/: corpus.go
bench/python/: bench_presidio.py  pyproject.toml
entities/: entities.go
lookaround/: go.mod  lookaround.go  lookaround_test.go
ner/: backend.go  backend_test.go  bench_test.go  config.go  example_test.go  go.mod  go.sum  ner.go  ner_test.go  offsets.go  windows.go  windows_test.go
pfilter/: binding.go  config.go  download.go  download_test.go  example_test.go  ffi.go  ffi_stub.go  ffi_test.go  go.mod  offsets.go  pfilter.go  pfilter_test.go  pool_test.go
recognizers/: au.go  brazil.go  checksum.go  defaults.go  generic.go  india.go  italy.go  others.go  singapore.go  spain.go  uk.go  us.go  validators_test.go
